# preprank

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.api  README.md  alembic.ini  docker-compose.yml  fly.toml  game_results_template.csv  package-lock.json  package.json  preprank_appstore_screenshots.jsx  preprank_landing.jsx  preprank_social_templates.jsx  railway.json  requirements.txt  vercel.json
apps/api/: .env.example  .env.production.example  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 1b0ff766b9a1_add_pickem_tables.py  269781bb831b_add_refresh_tokens.py  2e507355448f_add_hype_scores.py  a5a94be6e8d8_initial_schema.py
apps/api/app/: config.py  database.py  main.py  models.py
apps/api/app/auth/: dependencies.py  premium.py  tokens.py
apps/api/app/routers/: auth.py  favorites.py  games.py  hype.py  pickem.py  ratings.py  scenarios.py  schools.py  share.py  simulations.py  subscriptions.py  teams.py
apps/api/app/schemas/: auth.py  games.py  games_write.py  pickem.py  ratings.py  scenarios.py  schools.py  simulations.py  subscriptions.py  teams.py
apps/api/app/services/: name_matcher.py  pickem_service.py  score_ingestion.py  share_images.py  (+1 more)
apps/api/tests/: test_auth.py  test_database.py  test_hype.py  test_integration.py  test_models.py  test_name_matcher.py  test_pickem.py  test_routers_games.py  test_routers_ratings.py  test_routers_schools.py  test_routers_teams.py  test_scenarios.py  test_schemas.py  test_score_ingestion.py  test_share_images.py  test_simulations.py  test_subscriptions.py
(+132 files in other folders)
